<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BanActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_margin="20dp"
        android:text="@string/the_name_is"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleName"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/titleMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_margin="20dp"
        android:text="@string/the_mail_address_is"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleMail"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/titleDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mail"
        android:layout_margin="20dp"
        android:text="@string/the_mail_address_is"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleDate"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/titleAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_margin="20dp"
        android:text="@string/la_direcci_n_es"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleAddress"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/titlePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_margin="20dp"
        android:text="The number phone is:"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titlePhone"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/titlePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone"
        android:layout_margin="20dp"
        android:text="@string/the_password_is"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titlePass"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:text="@string/load_new_user"/>

</androidx.constraintlayout.widget.ConstraintLayout>